==> ScarsFun/STM32F1_ST7735_LL_DMA/Src/st7735.c <==
#include "st7735.h"
#include "stdlib.h"
#define TFT_BL_H() LL_GPIO_SetOutputPin(ST7735_CS_GPIO_Port, ST7735_BL_Pin)
#define TFT_BL_L() LL_GPIO_ResetOutputPin(ST7735_CS_GPIO_Port, ST7735_BL_Pin)
#define TFT_CS_H() LL_GPIO_SetOutputPin(ST7735_CS_GPIO_Port, ST7735_CS_Pin)
#define TFT_CS_L() LL_GPIO_ResetOutputPin(ST7735_CS_GPIO_Port, ST7735_CS_Pin)
#define TFT_DC_D() LL_GPIO_SetOutputPin(ST7735_CS_GPIO_Port, ST7735_DC_Pin)
#define TFT_DC_C() LL_GPIO_ResetOutputPin(ST7735_CS_GPIO_Port, ST7735_DC_Pin)
#define TFT_RES_H() LL_GPIO_SetOutputPin(ST7735_CS_GPIO_Port, ST7735_RES_Pin)
#define TFT_RES_L() LL_GPIO_ResetOutputPin(ST7735_CS_GPIO_Port, ST7735_RES_Pin)
#define SWAP_INT16_T(a, b) \
    {                      \
        int16_t t = a;     \
        a = b;             \
        b = t;             \
    }
#define DELAY 0x80

static void ST7735_Reset()
{
    TFT_RES_L();
    LL_mDelay(20);
    TFT_RES_H();
}

static void ST7735_ExecuteCommandList(const uint8_t* addr)
{
    uint8_t numCommands, numArgs;
    uint16_t ms;

    numCommands = *addr++;
    while (numCommands--) {
        uint8_t cmd = *addr++;
        ST7735_WriteCommand(cmd);

        numArgs = *addr++;
        // If high bit set, delay follows args
        ms = numArgs & DELAY;
        numArgs &= ~DELAY;
        if (numArgs) {
            ST7735_WriteData((uint8_t*)addr, numArgs);
            addr += numArgs;
        }

        if (ms) {
            ms = *addr++;
            if (ms == 255)
                ms = 500;
            LL_mDelay(ms);
        }
    }
}

void ST7735_FillRectangle(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color)
{
    // clipping
    if ((x >= _width) || (y >= _height))
        return;
    if ((x + w - 1) >= _width)
        w = _width - x;
    if ((y + h - 1) >= _height)
        h = _height - y;

    TFT_CS_L();
    ST7735_SetAddressWindow(x, y, x + w - 1, y + h - 1);
    TFT_DC_D();
    LL_DMA_SetMemoryIncMode(DMA1, LL_DMA_CHANNEL_3, LL_DMA_MEMORY_NOINCREMENT);
    uint16_t tbuf = color;
    Send_DMA_Data16(&tbuf, w * h);
    LL_DMA_SetMemoryIncMode(DMA1, LL_DMA_CHANNEL_3, LL_DMA_MEMORY_INCREMENT);
    TFT_CS_H();

    /*
    TFT_DC_D();
    uint16_t tbuf[w];
    for (int x = w ; x >= 0; x--) 
            tbuf[x] = color;
    for (y = h; y > 0; y--) 
        Send_DMA_Data16(tbuf,sizeof(tbuf)/2);
    TFT_CS_H();
    */
}
