==> viduraembedded/Raspberry-Pi-Pico/1.8inch_TFT_Display/src/st7735.c <==
#include "pico/stdlib.h"
#include "hardware/gpio.h"
#include "hardware/spi.h"
#include "st7735.h"
#include "stdlib.h"
#define TFT_CS_H()	gpio_put(LCD_CS, 1)
#define TFT_CS_L()	gpio_put(LCD_CS, 0)
#define TFT_DC_D()	gpio_put(LCD_DC, 1)
#define TFT_DC_C()	gpio_put(LCD_DC, 0)
#define TFT_RES_H()	gpio_put(LCD_RST, 1)
#define TFT_RES_L()	gpio_put(LCD_RST, 0)
#define ST7735_COLOR565(r, g, b) (((r & 0xF8) << 8) | ((g & 0xFC) << 3) | ((b & 0xF8) >> 3))
#define SWAP_INT16_T(a, b) { int16_t t = a; a = b; b = t; }
#define DELAY 0x80

static void ST7735_Reset()
{
	TFT_RES_L();
	sleep_ms(20);
	TFT_RES_H();
}

static void ST7735_ExecuteCommandList(const uint8_t *addr)
{
    uint8_t numCommands, numArgs;
    uint16_t ms;

    numCommands = *addr++;
    while(numCommands--)
    {
    	uint8_t cmd = *addr++;
        ST7735_WriteCommand(cmd);

        numArgs = *addr++;
        // If high bit set, delay follows args
        ms = numArgs & DELAY;
        numArgs &= ~DELAY;
        if(numArgs)
        {
            ST7735_WriteData((uint8_t*)addr, numArgs);
            addr += numArgs;
        }

        if(ms)
        {
            ms = *addr++;
            if(ms == 255) ms = 500;
            sleep_ms(ms);
        }
    }
}

void ST7735_FillRectangle(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color)
{
    // clipping
    if((x >= _width) || (y >= _height)) return;
    if((x + w - 1) >= _width) w = _width - x;
    if((y + h - 1) >= _height) h = _height - y;

    TFT_CS_L();
    ST7735_SetAddressWindow(x, y, x+w-1, y+h-1);

    uint8_t data[] = { color >> 8, color & 0xFF };
    TFT_DC_D();
    for(y = h; y > 0; y--)
    {
        for(x = w; x > 0; x--)
        {
#ifdef USE_SPI_DMA
        	spi_write_blocking(ST7735_SPI_PORT, data, sizeof(data));
        	//while(hspi1.State == HAL_SPI_STATE_BUSY_TX);
#else
        	spi_write_blocking(ST7735_SPI_PORT, data, sizeof(data));
#endif
        }
    }
    TFT_CS_H();
}
